# Student-Utility-Library

./: CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  basic_usage.py  file_utils_examples.py
src/: __init__.py
src/algorithms/: __init__.py  dynamic_programming.py  graph_algorithms.py  recursion.py  searching.py  sorting.py
src/data_structures/: __init__.py  binary_tree.py  hash_table.py  linked_list.py  queue.py  stack.py
src/file_utils/: __init__.py  basic_operations.py  content_analysis.py  directory_operations.py  file_info.py  structured_data.py
src/math_utils/: __init__.py  basic_math.py  number_theory.py  sequences.py  statistics.py
src/string_utils/: __init__.py  analysis.py  manipulation.py  validation.py
tests/: __init__.py  test_file_utils.py  test_math_utils.py  test_string_utils.py
